# khatkeashish.github.io

./: .nojekyll  _quarto.yml  about.html  about.qmd  index.html  index.qmd  listings.json  posts.html  posts.qmd  pyproject.toml  robots.txt  search.json  sitemap.xml
_site/: search.json
posts/2022-12-30_notebook/: index.html  index.ipynb
posts/2022-12-30_sample/: index.html  index.qmd
