[tool.poetry]
name = "khatkeashish.github.io"
version = "0.1.0"
description = ""
authors = ["khatkeashish <khatkeashish@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
nbformat = "^5.7.1"
jupyter = "^1.0.0"
matplotlib = "^3.6.2"
pandas = "^1.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
